# musicplayer

./: .gitignore  CMakeLists.txt  README.md  config.ini  player.cpp
.github/workflows/: build-debian.yml
